--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -40,6 +40,8 @@
                             </li>
                             
                         </ul>
+                        <div  ng-show="mostrarMensaje" class="alert alert-danger"><b>Ups</b> El usuario no existe o no tiene permisos para entrar en esta pagina</div>
+
                     </div>
                 </div>
             </div>
