--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -1,4 +1,5 @@
 <div id="wrapper">
+  <checkUser></checkUser>
     <!-- Sidebar -->
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,7 +44,7 @@
                     <i class="fa fa-check-square fa-2x"></i>
                   </div>
                   <div class="col-lg-3 text-right">
-                    <p class="announcement-heading">456</p>
+                    <p class="announcement-heading">{{pSanos}}</p>
                   </div>
                 </div>
                   <div class="row">
@@ -64,7 +65,7 @@
                     <i class="fa fa fa-wheelchair fa-2x"></i>
                   </div>
                   <div class="col-lg-3 text-right">
-                    <p class="announcement-heading">456</p>
+                    <p class="announcement-heading">{{pAlerta}}</p>
                  </div> 
                 </div>
                   <div class="row">
@@ -86,7 +87,7 @@
                     <i class="fa fa-exclamation-triangle fa-2x"></i>
                   </div>
                   <div class="col-lg-3 text-right">
-                    <p class="announcement-heading">3</p>
+                    <p class="announcement-heading">{{pCriticos}}</p>
                   </div>
                 </div>
                  <div class="row">
@@ -139,14 +140,14 @@
 <tbody>
 <tr ng-repeat="row in arrProyectos">
   
-  <td colspan="2">{{row.nombreProyecto}}</td>
+  <td colspan="2" ><span popover="{{ row.comentarioAlcance }}" popover-trigger="mouseenter">{{row.nombreProyecto}}</span></td>
   <td>{{row.beneficios}}</td>
-  <td>{{row.costosOneOff}}</td>
-  <td>{{row.costosOnGoing}}</td>
+  <td>{{row.costoOneoff}}</td>
+  <td>{{row.costoOneGoing}}</td>
   <td>{{row.desviacionPresupuesto}}</td>
   <td>{{row.desviacionTiempo}}</td>
   <td>{{row.desviacionAlcance}}</td>
-  <td>{{row.tipoProyecto}}</td>
+  <td>{{row.estrategiaProyecto}}</td>
 <td ></td>
  </tr>
 </tbody>
@@ -172,16 +173,16 @@
     <div class="row" ng-repeat="row in arrProgramacion">
     <div class="col-lg-4">
      {{row.nombreProyecto}}
-    </div>            
+    </div>
             <div class=" col-lg-8 progress">
                <div ng-repeat="mes in meses">
-               <span   ng-show="mes == row.mes1"  ng-class='{"progress-bar progress-bar-info":row.estadoMes1=="Pre Evaluación","progress-bar progress-bar-success":row.estadoMes1=="Evaluación", "progress-bar progress-bar-warning":row.estadoMes1=="Desarrollo","progress-bar progress-bar-danger":row.estadoMes1=="Producción"}'  style="width: 25%">{{row.estadoMes1}}</span>
+               <span   ng-show="mes == row.mes1"  ng-class='{"progress-bar progress-bar-default":row.estadoMes1=="Iniciativa","progress-bar progress-bar-info":row.estadoMes1=="Pre-Evaluacion","progress-bar progress-bar-success":row.estadoMes1=="Evaluacion", "progress-bar progress-bar-warning":row.estadoMes1=="Ejecucion","progress-bar progress-bar-danger":row.estadoMes1=="En produccion"}'  style="width: 25%">{{row.estadoMes1}}</span>
               
-               <span   ng-show="mes == row.mes2"  ng-class='{"progress-bar progress-bar-info":row.estadoMes2=="Pre Evaluación","progress-bar progress-bar-success":row.estadoMes2=="Evaluación", "progress-bar progress-bar-warning":row.estadoMes2=="Desarrollo","progress-bar progress-bar-danger":row.estadoMes1=="Producción"}'  style="width: 25%">{{row.estadoMes2}}</span>
+               <span   ng-show="mes == row.mes2"  ng-class='{"progress-bar progress-bar-default":row.estadoMes2=="Iniciativa","progress-bar progress-bar-info":row.estadoMes2=="Pre-Evaluacion","progress-bar progress-bar-success":row.estadoMes2=="Evaluacion", "progress-bar progress-bar-warning":row.estadoMes2=="Ejecucion","progress-bar progress-bar-danger":row.estadoMes2=="En produccion"}'  style="width: 25%">{{row.estadoMes2}}</span>
               
-               <span   ng-show="mes == row.mes3"  ng-class='{"progress-bar progress-bar-info":row.estadoMes3=="Pre Evaluación","progress-bar progress-bar-success":row.estadoMes3=="Evaluación", "progress-bar progress-bar-warning":row.estadoMes3=="Desarrollo","progress-bar progress-bar-danger":row.estadoMes3=="Producción"}'  style="width: 25%">{{row.estadoMes3}}</span>
+               <span   ng-show="mes == row.mes3"  ng-class='{"progress-bar progress-bar-default":row.estadoMes3=="Iniciativa","progress-bar progress-bar-info":row.estadoMes3=="Pre-Evaluacion","progress-bar progress-bar-success":row.estadoMes3=="Evaluacion", "progress-bar progress-bar-warning":row.estadoMes3=="Ejecucion","progress-bar progress-bar-danger":row.estadoMes3=="En produccion"}'  style="width: 25%">{{row.estadoMes3}}</span>
               
-               <span   ng-show="mes == row.mes4"  ng-class='{"progress-bar progress-bar-info":row.estadoMes4=="Pre Evaluación","progress-bar progress-bar-success":row.estadoMes4=="Evaluación", "progress-bar progress-bar-warning":row.estadoMes4=="Desarrollo","progress-bar progress-bar-danger":row.estadoMes4=="Producción"}'  style="width: 25%">{{row.estadoMes4}}</span>
+               <span   ng-show="mes == row.mes4"  ng-class='{"progress-bar progress-bar-default":row.estadoMes4=="Iniciativa","progress-bar progress-bar-info":row.estadoMes4=="Pre-Evaluacion","progress-bar progress-bar-success":row.estadoMes4=="Evaluacion", "progress-bar progress-bar-warning":row.estadoMes4=="Ejecucion","progress-bar progress-bar-danger":row.estadoMes4=="En produccion"}'  style="width: 25%">{{row.estadoMes4}}</span>
               
               </div>
             
@@ -200,50 +201,27 @@
               </div>
               <div class="panel-body">
                 <div class="table-responsive">
-                  <table class="table table-bordered table-hover table-striped tablesorter">
+                  <table class="table table-bordered table-hover table-striped tablesorter" data="estados">
                     <thead>
                       <tr>
                         <th class="header"></th>
                         <th class="header">Act.</th>
-                        <th class="header">Can.</th>
-                        <th class="header">Post.</th>
+                        <th class="header">3 Can.</th>
+                        <th class="header">4 Post.</th>
+                        <th class="header">2 Ter.</th>
                      
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td ><b>Iniciativas</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>2</td>
-                     
-                      </tr>
-                      <tr>
-                        <td ><b>Pre- Evaluación</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>2</td>
-                     
-                      </tr>
-                     <tr>
-                        <td ><b>Evaluación</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>2</td>      
+                      <tr ng-repeat="p in porTipo">
+                        <td ><b>{{ p.etapa }}</b></td>
+                        <td>{{ p.Activo }}</td>
+                        <td>{{ p.Cancelado }}</td>
+                        <td>{{ p.Postergado }}</td>
+                        <td>{{ p.Terminado }}</td>
+
                       </tr>
 
-                       <tr>
-                        <td ><b>Desarrollo</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>2</td> 
-                      </tr>
-                       <tr>
-                        <td ><b>En Producción</b></td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>2</td>
-                      </tr>
                     </tbody>
                   </table>
                 </div>  
