--- a/app/partials/modal_programacion.html
+++ b/app/partials/modal_programacion.html
@@ -1,6 +1,8 @@
 <div class="modal-dialog" id="modalProgramacion">
-<h2>Programacion Actividades</h2> 
- <div class="row">
+<h2>Programacion Actividades</h2>
+    <form  class="form-horizontal" role="form">
+
+    <div class="row">
           <div class="col-lg-12">
 <table id="tblProgramacion" class="table table-condensed" data-data-table="" data="arrProgramacion">
 <thead >
@@ -20,39 +22,39 @@
 
 </tr> 
 <tr> 
-<td></td>	
+<td></td>
 <td> 
-<select ng-model="proyecto.etapaProyecto">
+<select name= "planificacion.estadoMes1"ng-model="planificacion.estadoMes1">
     <option
             ng-repeat="operator in etapaProyecto"
-            value="{{operator.value}}">
+            value="{{operator.id}}">
       {{operator.nombre}}
     </option>
 </select>
 </td>
 <td> 
-<select ng-model="proyecto.etapaProyecto">
+<select name= "planificacion.estadoMes2" ng-model="planificacion.estadoMes2">
     <option
             ng-repeat="operator in etapaProyecto"
-            value="{{operator.value}}">
+            value="{{operator.id}}">
       {{operator.nombre}}
     </option>
 </select>
 </td>
 <td> 
-<select ng-model="proyecto.etapaProyecto">
+<select name= "planificacion.estadoMes3" ng-model="planificacion.estadoMes3">
     <option
             ng-repeat="operator in etapaProyecto"
-            value="{{operator.value}}">
+            value="{{operator.id}}">
       {{operator.nombre}}
     </option>
 </select>
 </td>
 <td> 
-<select ng-model="proyecto.etapaProyecto">
+<select name= "planificacion.estadoMes4" ng-model="planificacion.estadoMes4">
     <option
             ng-repeat="operator in etapaProyecto"
-            value="{{operator.value}}">
+            value="{{operator.id}}">
       {{operator.nombre}}
     </option>
 </select>
@@ -66,7 +68,8 @@
 </div> 
 
  <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-primary" ng-click="crearPlanificacion()">OK</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
+        </form>
 </div> 
