--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -20,15 +20,7 @@
           <cabecera></cabecera>
         </div><!-- /.navbar-collapse -->
       </nav>
-<div class="row">
-          <div class="col-lg-12">
-            <h1>DashBoard<small> Panel Proyectos</small></h1>
 
-  <ol class="breadcrumb">
-              <li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-   </ol>
-  </div>
-        </div><!-- /.row -->
 
 
 <div class="row"> 
@@ -157,7 +149,7 @@
   </div>
    <div class="row"> 
 
- <div class="col-lg-8">
+ <div class="col-lg-12">
       <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title" align="center">Planificacion proximos 4 meses</h3>
@@ -192,9 +184,9 @@
    </div>
  </div>
   </div>
-
-
-<div class="col-lg-4">
+</div>
+<div class="row">
+<div class="col-lg-6">
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title"  align="center"><i class="fa fa-money"></i> Estatus por tipo de Proyecto</h3>
@@ -206,9 +198,9 @@
                       <tr>
                         <th class="header"></th>
                         <th class="header">Act.</th>
-                        <th class="header">3 Can.</th>
-                        <th class="header">4 Post.</th>
-                        <th class="header">2 Ter.</th>
+                        <th class="header">Can.</th>
+                        <th class="header">Post.</th>
+                        <th class="header">Ter.</th>
                      
                       </tr>
                     </thead>
@@ -231,7 +223,7 @@
 
 
 
-<div class="col-lg-4">
+<div class="col-lg-6">
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title"><i class="fa fa-money"></i> Auditoria de Proyectos</h3>
