--- a/app/partials/proyecto.html
+++ b/app/partials/proyecto.html
@@ -188,4 +188,36 @@
 
     </div>
 
-  </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Adjuntos</h3>
+        </div>
+        <div class="panel-body">
+
+    <div class="row">
+
+        <div class="col-lg-10">
+            <table id="tblMisproyectos" class="table" data-data-table="" data="arrProyectos">
+                <thead>
+                <th colspan="2">Nombre</th>
+                <th>Tipo</th>
+                </thead>
+                <tbody>
+                <tr ng-repeat="row in arrAnexos ">
+                    <td colspan="2"><a href="{{ row.url }}"  target="_blank">{{ row.nombre }}</a> </td>
+                    <td>{{ row.tipo }}</td>
+
+                </tr>
+
+                </tbody>
+
+
+            </table>
+        </div>
+    </div>
+
+        </div>
+    </div>
+
+
+</div>
