--- a/app/partials/proyecto.html
+++ b/app/partials/proyecto.html
@@ -38,7 +38,7 @@
                         <div class="col-sm-6 ">: {{ proyecto.descripcionProyecto }} </div>
                     </div>
             <div class="row">
-                <label class="col-sm-3 "><b>Bussines Parther</b></label>
+                <label class="col-sm-3 "><b>Bussines Partner</b></label>
                 <label class="col-sm-3 ">:{{ proyecto.bpProyecto }}</label>
                 <label class="col-sm-3 "><b>Jefe Proyecto</b></label>
                 <label class="col-sm-3 ">:{{ proyecto.jefeProyecto }}</label>
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="row" ng-repeat="row in arrProgramacion">
-                        <div class="col-lg-1">
+                        <div class="col-lg-3">
                           <span ng-show="row.activo==1" class="fa fa-star"></span>
                         </div>
                         <div class=" col-lg-8 progress">
